--- a/cew.html
+++ b/cew.html
@@ -21,20 +21,20 @@
                 <li><a href="food_pantry.html">Food Pantry</a></li>
             </ul>
         </nav>
-        <h1>CENTER FOR THE EDUCATION OF WOMEN +</h1>
+        <h1 tabindex="0">CENTER FOR THE EDUCATION OF WOMEN +</h1>
     </header>
     <main class="container" id="main">
-        <section>
+        <section tabindex="0">
             <p>At CEW+, we navigate circumstantial barriers by providing academic, financial, and professional support to help you reach your personal potential. Established to support women through higher education, we lift up women and all underserved communities at U-M and beyond. Through career and education counseling, funding, workshops, events, and a diverse, welcoming community, we exist to empower. We are CEW+, and we are here to help you reach your potential.</p>
         </section>
 
-        <section>
+        <section tabindex="0">
             <h2>About Us</h2>
             <p>CEW+ empowers women+ and underserved individuals in the University of Michigan and surrounding communities by serving as an advocate and providing resources to help individuals reach their academic, financial, and professional potential.</p>
             <img src="images/cew_logo.png" alt="CEW+ Logo">
         </section>
 
-        <section>
+        <section tabindex="0">
             <h2>WHAT WE DO</h2>
             <p>CEW+ provides immediate and ongoing services and the financial support needed to ensure educational success and degree completion. Women+ and underserved students are CEW+’s primary constituency, but all students are welcome. CEW+ also serves those who encounter education and career obstacles based on their non-linear paths to, and experiences within, the University community.</p>
             <p>We proudly support students, faculty, staff, and the surrounding community with:</p>
@@ -47,18 +47,18 @@
             <img src="images/people_talking.jpeg" alt="Image of people talking">
         </section>
 
-        <section>
+        <section tabindex="0">
             <h2>History</h2>
             <p>Established in 1964, the Center for the Education of Women+ was a pioneering university women’s center. Designed to serve the needs of women students as well as women returning to school or work, CEW+ (then known as the Center for the Continuing Education of Women) was founded with a three-part mission of service, advocacy, and research. The Center for the Education of Women+ (now known as CEW+) continues its work today, serving University students, staff and faculty, community members, and all genders, facing education, employment, or other life issues.</p>
         </section>
 
-        <section>
+        <section tabindex="0">
             <h2>THE CEW+ TEAM</h2>
             <p>Our dedicated team is passionate about helping underserved communities and individuals at the University and beyond thrive.</p>
             <p><a href="https://www.cew.umich.edu/about/our-team/">Meet Our Team</a></p>
         </section>
 
-        <section>
+        <section tabindex="0">
             <h2>CONTACT US</h2>
             <p>330 E. Liberty Street<br>
                 Ann Arbor, MI 48104<br>
