--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
                 <li><a href = "food_pantry.html">Food Pantry</a></li>
             </ul>
         </nav>
-        <h1 class="main-title">Student Success Portal</h1>
+        <h1 class="main-title" tabindex="0">Student Success Portal</h1>
 
     </header>
     <main class="container" id = "main">
         <section class="welcome-section">
-            <h2>Welcome to the UM Grad Success Navigator</h2>
+            <h2 tabindex="0">Welcome to the UM Grad Success Navigator</h2>
             <p> Your Comprehensive Guide to Resources for Graduate School Success</p>
             <p>This guide is set up to help you be successul inside and outside of the classroom and we have included the following resources throughout our site:</p>
             <ol>
@@ -39,10 +39,10 @@
             </ol>
         </section>
         <section class="physical-health-section">
-            <h2>Physical Health</h2>
+            <h2 tabindex="0">Physical Health</h2>
             <p>Keeping your body healthy is essential for success. The University of Michigan offers numerous resources to help you stay in top physical condition:</p>
             <article class="resource-article">
-                <h3>University Health Service (UHS)</h3>
+                <h3 tabindex="0">University Health Service (UHS)</h3>
                 <figure>
                     <img src="images/UHS.jpg" alt="University Health Services building" class="resource-image">
                     <figcaption>University Health Services Building</figcaption>
@@ -50,7 +50,7 @@
                 <p>University Health Service (UHS): Access comprehensive medical care, including routine check-ups, vaccinations, and specialist referrals.</p>
             </article>
             <article class="resource-article">
-                <h3>Recreational Sports</h3>
+                <h3 tabindex="0">Recreational Sports</h3>
                 <figure>
                     <img src="images/UMSI_CampusFall_UMSIBackpack_02.jpg" alt="A student wears a UMSI backpack in fall on the drag." class="resource-image">
                     <figcaption>UMSI out in the fall!</figcaption>
@@ -60,24 +60,24 @@
         </section>
 
         <section class="mental-health-section">
-            <h2>Mental Health</h2>
+            <h2 tabindex="0">Mental Health</h2>
             <p>Maintaining your mental well-being is crucial for thriving in graduate school. Here are resources to support your mental health:</p>
             <article class="resource-article">
-                <h3>Counseling and Psychological Services (CAPS):</h3>
+                <h3 tabindex="0">Counseling and Psychological Services (CAPS):</h3>
                 <p> Access individual counseling, group therapy, workshops, and crisis intervention services.</p>
             </article>
             <article class="resource-article">
-                <h3>Wellness Coaching:</h3>
+                <h3 tabindex="0">Wellness Coaching:</h3>
 
                 <p>Work with a wellness coach to develop strategies for managing stress, time, and overall well-being.</p>
             </article>
             <article class="resource-article">
-                <h3>Mindfulness Resources:</h3>
+                <h3 tabindex="0">Mindfulness Resources:</h3>
 
                 <p> Participate in mindfulness and meditation sessions to cultivate a calm and focused mind.</p>
             </article>
             <article class="resource-article">
-                <h3>Support Groups:</h3>
+                <h3 tabindex="0">Support Groups:</h3>
 
                 <p> Join peer support groups for shared experiences and collective coping strategies.</p>
             </article>
@@ -85,7 +85,7 @@
 
         
         <section id="life-outside-classroom" class="life-outside-classroom-section">
-            <h2>Life Outside the Classroom</h2>
+            <h2 tabindex="0">Life Outside the Classroom</h2>
             <p>Graduate school is more than just academics. It's important to cultivate a balanced life. Here are some resources to help you enjoy life outside the classroom:</p>
 
             <ul class="resources-list">
