--- a/food_pantry.html
+++ b/food_pantry.html
@@ -21,15 +21,15 @@
                 <li><a href="food_pantry.html" class="active">Food Pantry</a></li>
             </ul>
         </nav>
-        <h1>WELCOME TO MAIZE & BLUE CUPBOARD</h1>
+        <h1 tabindex="0">WELCOME TO MAIZE & BLUE CUPBOARD</h1>
     </header>
     <main class="container" id="main">
-        <section>
+        <section tabindex="0">
             <h2>OUR MISSION</h2>
             <p>To ensure members of the University of Michigan community—whether on a tight budget or physically restrained from getting to a grocery store—receive equitable access to healthy, nutritious, and nourishing food and the ability to prepare it for themselves or others.</p>
         </section>
 
-        <section>
+        <section tabindex="0">
             <h2>WHO WE ARE</h2>
             <p>College students and staff are experiencing food insecurity at alarming rates. The Maize and Blue Cupboard is here to provide an immediate and comprehensive response for the U-M community. By offering resources, educational opportunities, compassionate support and more, we help students develop the skills to make informed decisions.</p>
             <figure>
@@ -40,19 +40,19 @@
             </figure>
         </section>
 
-        <section>
+        <section tabindex="0">
             <h2>MAKE AN APPOINTMENT NOW</h2>
             <p>Shopping at the Maize and Blue Cupboard is by appointment only. Please make an appointment by visiting our sign-up page <a href="https://calendly.com/mbcappointments/mbc-shopping-appointments?month=2024-09">here.</a></p>
         </section>
 
-        <section>
+        <section tabindex="0">
             <h2>LOCATION</h2>
             <p>Located in the basement of the Betsy Barbour Residence Hall, please enter via the Maynard entrance only to ensure privacy for residents. Please contact us if you need ramp or elevator access.</p>
             <p>Address: 420 S State St Ann Arbor, MI 48109</p>
             <p>Phone: 734-936-2794</p>
         </section>
 
-        <section>
+        <section tabindex="0">
             <h2>HOURS</h2>
             <p>On Monday 10/30, the Maize and Blue Cupboard will transition to shopping by appointment only. Schedule your shopping appointment <a href="https://calendly.com/mbcappointments/mbc-shopping-appointments?month=2024-09">here.</a></p>
         </section>
