--- a/cew.html
+++ b/cew.html
@@ -21,7 +21,7 @@
                 <li><a href="food_pantry.html">Food Pantry</a></li>
             </ul>
         </nav>
-        <h1 tabindex="0">CENTER FOR THE EDUCATION OF WOMEN +</h1>
+        <h1 class="main-title" tabindex="0">CENTER FOR THE EDUCATION OF WOMEN +</h1>
     </header>
     <main class="container" id="main">
         <section tabindex="0">
@@ -65,12 +65,17 @@
                 (734) 764-6360</p>
         </section>
     </main>
+
     <footer>
                 <p>&copy; 2024 University of Michigan. All rights reserved.</p>
                 <p>University of Michigan<br>
                    530 South State Street<br>
                    Ann Arbor, MI 48109<br>
                    Phone: (734) 764-1817</p>
+                    <p id="year"></p>
     </footer>
+    <button class="floating-action-btn" aria-label="Scroll to Top">↑</button>
+    <script src="js/script.js"></script>
+
 </body>
 </html>
