--- a/food_pantry.html
+++ b/food_pantry.html
@@ -21,7 +21,7 @@
                 <li><a href="food_pantry.html" class="active">Food Pantry</a></li>
             </ul>
         </nav>
-        <h1 tabindex="0">WELCOME TO MAIZE & BLUE CUPBOARD</h1>
+        <h1 class="main-title" tabindex="0">WELCOME TO MAIZE & BLUE CUPBOARD</h1>
     </header>
     <main class="container" id="main">
         <section tabindex="0">
@@ -57,12 +57,17 @@
             <p>On Monday 10/30, the Maize and Blue Cupboard will transition to shopping by appointment only. Schedule your shopping appointment <a href="https://calendly.com/mbcappointments/mbc-shopping-appointments?month=2024-09">here.</a></p>
         </section>
     </main>
+
     <footer>
         <p>&copy; 2024 University of Michigan. All rights reserved.</p>
         <p>University of Michigan<br>
            530 South State Street<br>
            Ann Arbor, MI 48109<br>
            Phone: (734) 764-1817</p>
+           <p id="year"></p>
 </footer>
+<button class="floating-action-btn" aria-label="Scroll to Top">↑</button>
+<script src="js/script.js"></script>
+
 </body>
 </html>
