--- a/index.html
+++ b/index.html
@@ -99,12 +99,19 @@
         <!-- Content taken & modified from UMGPT with the prompt, "write me a webpage of intro content to help University of Michigan Master's students navigate different resources for being successful in grad school - this will include academic resources, physical health resources, mental health resources, support for life outside the classroom"
         UMGPT. (2024). UMGPT (August 29th version) [Large language model]. -->
     </main>
+
+
     <footer>
         <p>&copy; 2024 University of Michigan. All rights reserved.</p>
         <p>University of Michigan<br>
            530 South State Street<br>
            Ann Arbor, MI 48109<br>
            Phone: (734) 764-1817</p>
+           <p id="year"></p>
 </footer>
+
+<button class="floating-action-btn" aria-label="Scroll to Top">↑</button>
+<script src="js/script.js"></script>
+
 </body>
 </html>
